# zindict

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  build-linux-clang.sh  build-linux-gcc.sh  build-macos-clang.zsh  build-windows-mingw.ps1  build-windows-msvc.ps1  build.rs  fetch-deps.bat  fetch-deps.sh
.github/: RELEASE.md
.github/workflows/: rust.yml
docs/: build.md  config_example.toml  dict.txt  directories.md
include/: about.h  color.h  main.h  str.h
scripts/: build.bat  build.sh  rust_toolchain_windows.ps1
src/: about.c  color.c  lib.rs  main.c  main.rs  str.c
src/config/: about.rs  color_serde.rs  config.rs  mod.rs
src/dao/: dict.rs  mod.rs
src/ffi/: binhub.rs  mod.rs
src/prompt/: prompt.rs
src/resources/manuals/: user_manual_en_US.txt  user_manual_zh_CN.txt
