[package]
name = "zindict"
version = "0.1.1"
edition = "2024"
authors = ["Mr. ZENG Lai <vip201@126.com>"]
build = "build.rs"  # 构建脚本

[build-dependencies]
chrono = "0.4.43"
rustyline = "17.0.2"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dirs = "6.0.0"  # 用于获取可执行文件路径（如果需要跨平台）
rusqlite = { version = "0.38.0", features = ["bundled"] }

[dependencies]
chrono = "0.4.43"
rustyline = "17.0.2"
toml = "0.9.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
dirs = "6.0.0"  # 用于获取可执行文件路径（如果需要跨平台）
rusqlite = { version = "0.38.0", features = ["bundled"] }
libc = "0.2.180"  # 用于C类型
